--- a/main.css
+++ b/main.css
@@ -388,6 +388,7 @@ button:not(:disabled) {
   font-weight: 700;
   text-decoration: none;
   white-space: nowrap;
+  margin-left: 36px;
 }
 
 .navbar-light .navbar-brand {
