--- a/main.css
+++ b/main.css
@@ -430,7 +430,7 @@ button:not(:disabled) {
 }
 
 .mb-5 {
-  margin-bottom: 3rem !important;
+  margin-bottom: 2rem !important;
   text-align: center;
 }
 
@@ -480,8 +480,8 @@ header.masthead {
   background-color: #343a40;
   background: url(images/bg.jpg) no-repeat center center;
   background-size: cover;
-  padding-top: 17rem;
-  padding-bottom: 14rem;
+  padding-top: 15rem;
+  padding-bottom: 12rem;
 }
 
 header.masthead:before {
@@ -497,11 +497,12 @@ header.masthead:before {
 
 header.masthead h1 {
   font-size: 2rem;
+  margin: 28px;
 }
 
 @media (min-width: 768px) {
   header.masthead {
-    padding-top: 42vh;
+    padding-top: 36vh;
     padding-bottom: 29vh;
   }
   header.masthead h1 {
