--- a/main.css
+++ b/main.css
@@ -304,7 +304,7 @@ button:not(:disabled) {
   border: 1px solid transparent;
   padding: 0.45rem 1rem;
   font-size: 1rem;
-  border-radius: 0.25rem;
+  border-radius: 0.75rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
@@ -519,4 +519,19 @@ header.masthead h1 {
     position: sticky;
     bottom: 0;
   }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fade-button {
+  animation: fadeIn 2s;
+  animation-fill-mode: both;
+  animation-delay: 2s;
 }
